@@ -1,4 +1,5 @@
 DIST zynaddsubfx-collection-0.7.tar.gz 399845 SHA256 544f45391ce4b610998086b6d854a4f02fd0212d13a6340d564068e88f0f6a11 SHA512 03095f6402f991f3eb3a6ae548b67e94c38713a1bada6f97d562f0ea19f8746de1309eb26a6064ba802c6a88ae4c11b31943513e66f7dd6b06906b7f3608edc2 WHIRLPOOL 97d52a8dbb8a26e7c3d62db2d20052ff38b4327f3a45cdad3266437ee5afef1f4fb1de15a7a84034c972f90e99a9aa1b10e30c539806e3c2b12f9a040a51d817
-EBUILD zynaddsubfx-collection-0.7.ebuild 1073 SHA256 e559f05451b0750e82d18c62de9ff10cb9f1f8c0cbe9f979b6bdfa4e3773cd4a SHA512 eedd3f849068eda92f365879298ef01643de39f0546368389265fa93f0b778628c03a0d02e131bebbc831fe4258f74a3a1b995cdc162157000da9dd1d0e182ea WHIRLPOOL 30c5078662c72982fc5423a9f3ee6274e1adda4b0a05c286c32acc68a15a281b72e8c0ea086562e3e98c91f0386f4be6025d4eb3524f58e438ff04988b76267b
-MISC ChangeLog 1365 SHA256 a855997a4772f8863b46e7fd79c2e09fac0794ae4ccd9df25fdc4e630c226527 SHA512 23e63a63186f9f357190df2d6d0549c2af38519a86ad5d0b7072ec377ff3eccb0e41fca21c78c1d3e52dde3cbe3e0e88ce1ca00c743887c00057c3d2042ac93e WHIRLPOOL 065586046c0c4b839516951b5329a5feda06f4df274e0e9d7ed33d5a9194b6dd017dacf0e401574d7c00b83f18b4664c24c39ba90e3f45c139698a48651de117
+EBUILD zynaddsubfx-collection-0.7-r1.ebuild 1056 SHA256 880f3a8bcb76f4aec3ccbdd693f8c05fed804bf7fc52abab5816f68a8a323780 SHA512 bbd68b8998e9fc56ee623ac4fecf13eaea51a9fd8091c9968484132d4470694b34ad60f417a3e8f04bda0baa4025f050599e9f442668a117ff132ec4babb7652 WHIRLPOOL e3897cbab05010b2f1763f0f2a381676689efb5aa96530a58f8425d020e6321e3966fd87e6d1ea98bafc15d915e927c330f48898633079d0002e59d55488b6a3
+EBUILD zynaddsubfx-collection-0.7.ebuild 1075 SHA256 9236cc0bd2dd300a4d9461b9a74ef7ddeb6c2ebe87e5a1a07aafa61b47db5ca8 SHA512 5961ddddcbd8444b07419ff2f35f4028a0dc51d817c130d8192077e3cedea69d0ea42b684bc2c1bda35a2f00b4cf58120bb2059f97aa8281a2642c98a1eeef51 WHIRLPOOL 7b50d84e91a778ce8358ff960e39ddcdaa9bf4deee1dd491835d7652ce91fcb17000d39430fbf10b04b341eb1cb0f4f7437595446d6ca6a97acf08a003f9e121
+MISC ChangeLog 1744 SHA256 3aa8b77f0793c6616b916b96525464bec7f16f0bcc865a902927e17552f26627 SHA512 5a49947f1bf0e6b0bbc8f7c26e0ab6af150bea8a2ecf3b98ab259e7b3d0ead12585a2b7ab2290fb7d28333bbd30d1b144e19afbc412770e3647bb3e3db0dc7ae WHIRLPOOL 01dbaec0be758b10dacf7a0acfe8f2b59cf8e8d95bc67e3f99f6ddcf5a6a26982f91db0d5c76780d1ad87f8ff3f2bdbcf2ca31247b2082f80aee1d8277e51bd7
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
